src/test/ui/associated-types/impl-wf-cycle-1.stderr
error[E0275]: overflow evaluating the requirement `<(T,) as Grault>::A == _`
  --> $DIR/impl-wf-cycle-1.rs:15:1
   |
LL | impl<T: Grault> Grault for (T,)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: required for `(T,)` to implement `Grault`
  --> $DIR/impl-wf-cycle-1.rs:15:17
   |
LL | impl<T: Grault> Grault for (T,)
   |                 ^^^^^^     ^^^^
   = note: 1 redundant requirement hidden
   = note: required for `(T,)` to implement `Grault`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
